gcc/testsuite/g++.dg/cpp0x/lambda/lambda-ice6.C
// PR c++/51464
// { dg-options "-std=c++0x" }

template<int = sizeof([])> struct A {}; // { dg-error "lambda" } 
